src/test/ui/pattern/patkind-litrange-no-expr.stderr
error: arbitrary expressions aren't allowed in patterns
  --> $DIR/patkind-litrange-no-expr.rs:20:13
   |
LL |     Arith = 1 + 1,
   |             ^^^^^

error: arbitrary expressions aren't allowed in patterns
  --> $DIR/patkind-litrange-no-expr.rs:20:13
   |
LL |     Arith = 1 + 1,
   |             ^^^^^

error: aborting due to 2 previous errors

